[package]
name = "divans-no-stdlib"
version = "0.0.1"
authors = [
    "Daniel Reiter Horn <danielrh@dropbox.com>",
    "Jongmin Baek <jongmin@dropbox.com>",
    "Anatoly Yakovenko <anatoly@dropbox.com>"
]
license = "BSD-3-Clause/MIT or Apache"
documentation = "tbd"
keywords = ["brotli", "decompression", "lz77", "huffman", "nostd"]
readme = "README.md"
build = "../build.rs"

[[bin]]
name="divans"
path="../src/bin/divans.rs"

[lib]
crate-type=["rlib"]
path="../src/lib.rs"

[profile.release]
lto=true

[build-dependencies]
vergen = "0.1"

[dependencies]
"alloc-no-stdlib" = "~1.2"
"brotli" = { version = "1.1"}
"stdsimd" = { version = ">= 0.0.3", optional = true }

[features]
default= ["no-stdlib","no-stdlib-rust-binding", "no-stdlib-rlib"]
avx2=[]
billing = []
blend = []
debug_entropy = []
bitcmdselect = []
float64 = []
block_switch = []
simd = ["stdsimd"]
seccomp = ["brotli/seccomp"]
no-stdlib = ["alloc-no-stdlib/no-stdlib", "brotli/no-stdlib"]
no-stdlib-rust-binding = []
benchmark = ["brotli/benchmark"]
external-literal-probability = ["brotli/external-literal-probability"]
no-stdlib-rlib = []
uncached_frequentist = []
